tests/ui/lint/snapshots/manual_waitgroup_go_cedes_to_add_in_task.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `WaitGroup.Add` inside a `task`
   ╭─[test.lis:7:5]
 6 │   task {
 7 │     wg.Add(1)
   ·     ────┬────
   ·         ╰── may run after `Wait`
 8 │     task {
   ╰────
  help: Prefer `wg.Go(|| ...)`, which counts the task and starts it in one step and runs `Done` for you, or move `Add` before the `task` · code: [lint.waitgroup_add_in_task]
