tests/ui/lint/snapshots/manual_waitgroup_go_defer_after_deferred_done.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `WaitGroup.Go`
   ╭─[test.lis:7:3]
 6 │   let wg = sync.WaitGroup {}
 7 │   wg.Add(1)
   ·   ────┬────
   ·       ╰── counts the next `task`
 8 │   task {
   ╰────
  help: Prefer `wg.Go(|| ...)`, which counts the task and starts it in one step and runs `Done` for you · code: [lint.manual_waitgroup_go]
