tests/ui/lint/snapshots/map_identity_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `map`
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = r.map(|x| x)
   ·           ──────┬─────
   ·                 ╰── does nothing
 5 │ }
   ╰────
  help: Remove `.map(|x| x)`, which returns its input unchanged · code: [lint.map_identity]
