tests/ui/lint/snapshots/map_or_none_option.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `and_then`
   ╭─[test.lis:8:11]
 7 │   let o: Option<int> = Some(1)
 8 │   let _ = o.map_or(None, maybe)
   ·           ──────────┬──────────
   ·                     ╰── can be simpler
 9 │ }
   ╰────
  help: Replace `.map_or(None, f)` with `.and_then(f)` · code: [lint.map_or_none]
