tests/ui/lint/snapshots/map_unwrap_or_option.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `map_or`
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = o.map(|x| x * 2).unwrap_or(0)
   ·           ──────────────┬──────────────
   ·                         ╰── can be simpler
 5 │ }
   ╰────
  help: Replace `.map(f).unwrap_or(d)` with `.map_or(d, f)` · code: [lint.map_unwrap_or]
